# ProcureToPaySystem

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/app/: main.py  seed.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py  0002_org.py
backend/app/core/: audit.py  config.py  db.py  deps.py  errors.py  logging.py  mail.py  rbac.py  security.py  storage.py
backend/app/health/: router.py
backend/app/models/: base.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/org/: csv_import.py  models.py  router.py  schemas.py  service.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_config_guard.py  test_db.py  test_errors.py  test_health.py  test_migrations.py  test_org_api.py  test_org_csv.py  test_org_service.py  test_rbac.py  test_security.py  test_seed.py  test_storage.py  test_users.py  test_worker.py
docker/: docker-compose.yml
docs/superpowers/plans/: 2026-07-09-slice0-foundation.md  2026-07-09-slice1-org.md
docs/superpowers/specs/: 2026-07-09-slice0-foundation-design.md  2026-07-09-slice1-org-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: AuthContext.test.tsx  CostCenters.test.tsx  GLAccounts.test.tsx  Login.test.tsx  OrgAdminErrors.test.tsx
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
(+12 files in other folders)
